--- a/infrastructure/.env-example
+++ b/infrastructure/.env-example
@@ -1,4 +1,5 @@
 NODE_ENV=development
+NODE_PATH=node_modules/
 MONGO_URL=mongodb://mongo/hapi-server
 PORT=8080
 JWT_SECRET=A2B279514C3C9FFD8FE482A736FAC
