--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "boom": "^7.3.0",
+    "bulma-calendar": "^5.0.3",
     "hapi": "^17.5.3",
     "hapi-auth-cookie": "^9.1.0",
     "inert": "^5.1.2",
